Updates to coho results figures in case study paper

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -606,7 +606,7 @@ Table: (\#tab:projectedLRPs2020) Projection-based LRPs from forward projections 
 Generational average spawning abundance (based on a 3-year geometric mean) remained above the projection-based LRP derived using the Ricker model with a probability threshold of p = 0.5 for most years between 2000 and 2020. There were two years in which aggregate spawning abundance dropping below the LRP: 2006 and 2007 (Figure \@ref:fig(coho-AggEscpSeries-wProjLRP). In comparison, when projection-based LRPs were derived using the Ricker_priorCap model with p = 0.5, aggregate spawning abundance remained below the LRP for 11 out of the 21 years.  
 
 
-```{r coho-AggEscpSeries-wProjLRP, fig.cap="Three-year geometric mean of aggregate spawning abundance for the Interior Fraser Coho SMU (black line) relative to projection-based LRP estimates using two different stock recruitment model formulations, Ricker and Ricker\\_priorCap, with a probability threshold of p=0.5. Forward projections used to estimate reference points were parameterized using available 1998-2020 time series under base model assumptions.", warning=FALSE, echo=FALSE, out.width = '60%',  fig.align="center"}
+```{r coho-AggEscpSeries-wProjLRP, fig.cap="Three-year geometric mean of aggregate natural-origin spawning abundance for the Interior Fraser Coho SMU (black line) relative to projection-based LRP estimates using two different stock recruitment model formulations, Ricker and Ricker\\_priorCap, with a probability threshold of p=0.5. Forward projections used to estimate reference points were parameterized using available 1998-2020 time series under base model assumptions.", warning=FALSE, echo=FALSE, out.width = '60%',  fig.align="center"}
 knitr::include_graphics("figure/coho-EscpSeries-wProjLRP.png")
 ```
 
